Bug 205721 - The autocompletion does not work when trying to add composed family names in a Group.
Summary: The autocompletion does not work when trying to add composed family names in ...
Status: CLOSED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-30 20:38 UTC by Sabine Faure
Modified: 2009-10-09 18:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-08-30 20:38:05 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Configure Akonadi with an IMAP and Kolab resource.
- Launch Kaddressbook
- create a new Contact with a composed family name (John Smith-Miller). Click on 'Ok'
- Create a new Group and try to add the Contact that you have just created by just entering a few letters.

Nothing happens. The autocompletion does not seem to work with a composed family name when separated by a dash.

If you cancel out, go back to the Contact and modify its name removing the dash (John Smith Miller) then the autocompletion works when creating a Group.

Trunk, Svn Rev 1016607
Comment 1 Tobias Koenig 2009-08-30 22:11:26 UTC
SVN commit 1017516 by tokoe:

Don't use Addressee::fullEmail() for autocompletion

The fullEmail() method might return quoted strings
(e.g. "John Smith-Miller" <john@smithmiller.com>) if
the name contains special characters, so we can't use it
for auto completion but have to implement our own
algorithm.

BUG: 205721


 M  +14 -1     contactcompletionmodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1017516
Comment 2 Sabine Faure 2009-09-03 02:06:13 UTC
Now the autocompletion works fine with a composed family name but when you add it to a new group then the group does not get created at all.

So I am reopening this bug.

Note: If you add the composed family name in a Group and then add another standard member (Toto Tutu <toto@server.com>), the Group gets created. But in Kaddressbook display column you can see that the member format is not displayed correctly for the composed family name <toto@server.com> instead of ''Toto Tutu <toto@server.com>''

So there is still pbs with composed family names.

Trunk, Svn Rev 1018367
Comment 3 Sabine Faure 2009-10-09 18:35:41 UTC
I retested this today and it works fine.

The autocompletion works with composed familly names now and the group is created normally. The group member is displayed correctly too.

So I am closing this bug.


Trunk, Svn Rev 1033074