Don't use Addressee::fullEmail() for autocompletion

The fullEmail() method might return quoted strings
(e.g. "John Smith-Miller" <john@smithmiller.com>) if
the name contains special characters, so we can't use it
for auto completion but have to implement our own
algorithm.

BUG: 205721

svn path=/trunk/KDE/kdepim/akonadi/contact/; revision=1017516