contact/contactcompletionmodel.cpp
@@ -89,7 +89,20 @@ QVariant ContactCompletionModel::getData( const Item &item, int column, int role
           return contact.assembledName();
         break;
       case NameAndEmailColumn:
-        return contact.fullEmail();
+        {
+          QString name = QString::fromLatin1( "%1 %2" ).arg( contact.givenName() )
+                                                       .arg( contact.familyName() ).simplified();
+          if ( name.isEmpty() )
+            name = contact.organization().simplified();
+          if ( name.isEmpty() )
+            return QString();
+
+          const QString email = contact.preferredEmail().simplified();
+          if ( email.isEmpty() )
+            return QString();
+
+          return QString::fromLatin1( "%1 <%2>" ).arg( name ).arg( email );
+        }
         break;
       case EmailColumn:
         return contact.preferredEmail();
